--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^5.1.4",
-    "@loadable/component": "^5.15.3",
+    "@loadable/component": "^5.16.3",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-i18next": "^12.3.1",
+    "react-icons": "^4.12.0",
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.12.1",
     "react-scripts": "^5.0.1",
