--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint-plugin-import": "^2.27.5",
     "formik": "^2.4.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-i18next": "^12.3.1",
