--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-scripts": "^5.0.1",
     "react-slick": "^0.29.0",
     "react-sweetalert2": "^0.6.0",
+    "redux-persist": "^6.0.0",
+    "redux-state-sync": "^3.1.4",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
   },
