--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "redux-persist": "^6.0.0",
     "redux-state-sync": "^3.1.4",
     "sweetalert2": "^11.10.5",
+    "toastr": "^2.1.4",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.3"
   },
